test: add config
